--- a/DSA07-Tree/codes/Makefile
+++ b/DSA07-Tree/codes/Makefile
@@ -6,6 +6,12 @@ ex_binarytree: ex_binarytree.c
 ordering: ordering.c
 	gcc -Wall -O0 -o $@ $<
 
+calculator: calculator.c
+	gcc -Wall -O0 -o $@ $<
+
+dic: dic.c
+	gcc -Wall -O0 -o $@ $<
+
 clean:
-	rm ex_binarytree ordering
+	rm ex_binarytree ordering calculator dic
 
