--- a/DSA07-Tree/codes/Makefile
+++ b/DSA07-Tree/codes/Makefile
@@ -12,6 +12,9 @@ calculator: calculator.c
 dic: dic.c
 	gcc -Wall -O0 -o $@ $<
 
+BST-demo: BST_demo
+	gcc -Wall -O0 -g $@ $<
+ 
 clean:
-	rm ex_binarytree ordering calculator dic
+	rm ex_binarytree ordering calculator dic BST_demo
 
