--- a/DSA07-Tree/codes/Makefile
+++ b/DSA07-Tree/codes/Makefile
@@ -13,8 +13,11 @@ dic: dic.c
 	gcc -Wall -O0 -o $@ $<
 
 BST-demo: BST_demo
-	gcc -Wall -O0 -g $@ $<
+	gcc -Wall -O0 -o $@ $<
+
+heap: heap.c
+	gcc -Wall -O0 -o $@ $<
  
 clean:
-	rm ex_binarytree ordering calculator dic BST_demo
+	rm ex_binarytree ordering calculator dic BST_demo heap
 
