--- a/DSA09-Graph2/Makefile
+++ b/DSA09-Graph2/Makefile
@@ -4,6 +4,10 @@ outdir=/tmp
 all: ${texfile}
 	pdflatex --shell-escape --output-directory ${outdir} $< 
 
+DSA_2017_09ex: DSA_2017_09ex.tex
+	pdflatex --shell-escape --output-directory ${outdir} $< 
+
+
 clean:
 	rm *.aux *.log *.nav *.out *.snm *.toc *.vrb
 
